--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Backend for confectionery products catalog",
   "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
@@ -16,21 +17,22 @@
     "@adminjs/express": "^6.1.1",
     "@adminjs/sequelize": "^4.1.1",
     "adminjs": "^7.8.15",
-    "compression": "^1.8.1",
+    "bcryptjs": "^3.0.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^16.3.1",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "helmet": "^8.1.0",
-    "joi": "^18.0.1",
-    "morgan": "^1.10.1",
-    "pg": "^8.16.3",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "sequelize-cli": "^6.6.2"
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
